# game-of-life

./: CMakeLists.txt
includes/: rules.h  screen.h
src/: main.cpp  rules.cpp
